read me modification

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "@fortawesome/fontawesome": "^1.1.0",
+    "angular4-datepicker": "^1.0.1",
     "body-parser": "^1.18.2",
     "bootstrap": "3",
     "core-js": "^2.4.1",
@@ -29,10 +29,10 @@
     "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.2",
     "jquery": "^3.2.1",
+    "ngx-mydatepicker": "^2.4.0",
     "rxjs": "^5.4.2",
     "sequelize": "^4.28.6",
     "sqlite3": "^3.1.13",
-    "sweetalert": "^2.1.0",
     "sweetalert2": "^7.3.0",
     "x-editable": "^1.5.1",
     "zone.js": "^0.8.14"
