--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular4-datepicker": "^1.0.1",
     "body-parser": "^1.18.2",
     "bootstrap": "3",
+    "bootstrap-tagsinput": "^0.7.1",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
