--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/jquery": "^3.3.0",
+    "@types/jstree": "^3.3.36",
+    "angular-tree-component": "^7.0.1",
     "angular4-datepicker": "^1.0.1",
     "body-parser": "^1.18.2",
     "bootstrap": "3",
@@ -30,6 +33,9 @@
     "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.2",
     "jquery": "^3.2.1",
+    "jstree": "^3.3.5",
+    "lodash": "^4.17.5",
+    "ng2-tree": "^2.0.0-rc.4",
     "ngx-mydatepicker": "^2.4.0",
     "rxjs": "^5.4.2",
     "sequelize": "^4.28.6",
